added stats command replaced legacy stats with multiply database contexts fixed issue with game integration
Signed-off-by: Emmanuel Lampe <mail@emmanuel-lampe.de>